--- a/puja.css
+++ b/puja.css
@@ -1,126 +1,129 @@
+
+@import url(https//db.onlinewebfonts.com/c/cced4e510c3db5d90f32c0732eddaf8a?family=Futura);
+@import url(https//db.onlinewebfonts.com/c/952bab25f6798d6bb1937d67e9bee4dd?family=Sans);
 *{
 	margin: 0;
 	padding: 0;
-	box-sizing: border-box;
+box-sizing: border-box;
 }
-
 body{
-	background: #F2F3EB;
-	font-family: arial, sans-serif;
-	font-size: 18px;
-	line-height: 0.2px;
-}
-header{
-	background: #43494D;
-	text-align: center;
-	height: 110px;
-	position: relative;
-}
-.logo{
-	float: left;
-	padding-top: 50px;
-	}
-	.ban{
-	background-size: contain;
-	height:500px;
-	}
-.logo a{
-	color: #ffffff;
-}
-
-nav {
-	background-color: transparent;
-	transition: all 0.3s;
-	line-height: 40px;
-	padding-top: 40px;
-	
-	}
-nav ul{
-	float:right;
-	
-	}
-	nav ul li{
-	list-style: none;
-	display: inline;
-	padding-right: 40px;
-	}
-	nav ul li a{
-	
-	text-align: center;
-	color: #ffffff;
+	background: #ffffff;
 }
 a{
 	text-decoration: none;
+}
+#head1{
+	width:100%;
+	background: #ffffff;
 	}
-a:hover{
-	color:#BD352D;
+.navbar{
+	border-bottom:3px solid #85E6CD;
+	padding: 35px 0;
+	color:#4C4C4C;
 }
-.container1{
-	width: 100%;
-	height: auto;
-	background: #43494D;
+.navbar-default .navbar-brand {
+	color:#373737;
 }
-.container{
-	width: 1140px;
-	margin: auto;
+.navbar-default{
+	background: #ffffff;
 }
-.banner{
-	background: url('puja.jpg') no-repeat;
+.navbar-default .navbar-nav>li>a {
+	color: #000000;
+}
+.navbar-default .navbar-brand1  {
+	color: #A9E7D1;
+}
+#home {
+	background: url(banner.webp);
+	min-height: 650px;
 	background-size: cover;
-	position: relative;
-	z-index: 1;
-}
-.banner_in{
+	}
+	.banner_in {
 	background: rgba(0,0,0,0.5);
-	height: 700px;
+	min-height: 650px;
 }
-.banner-text {
-	position: absolute;
+.okb
+{
+	padding-top:20px;
+	line-height: 7.1em;
+}
+.btn-primary{
+	background: #50DAAC;
+	padding: 10px 26px;
+	text-transform: uppercase;
+	border: none;
+}
+.btn-primary a{
 	color: #fff;
-	left: 20%;
-	top: 10%;
-	font-weight: bolder;
-	font-size: 27px;
-	border-top-left-radius: 6px solid #d60000;
+	text-decoration: none;
+	}
+.btn-primary:hover{
+	background:#FFD575;
+	font-weight: bold;
+	color: #000;
+	transition: 0.6s;
+}
+.uzz a:hover{
+	color: #000;
+}
+.bg1
+{
+	width: 100%;
+	min-height: 108px;
+	background: #FFC041;
+}
+.bg1 h1{
+	color: #000;
+	font-size: 3em;
+	line-height: 9px;
+	font-family:futura-lt-w01-light,sans-serif;
+	padding-top: 24px;
+	}
+.bg1 h1:after{
+	content: "";
+		border-bottom: 4px solid #000;
+		width: 20px;
+	}
+.bg2{
+	background: #FFFFFF;
+	}
+.line{
+	border:3px solid #85E6CD;
+	border-top: none;
+	border-left: none;
+	border-right: none;
+	padding: 22px 0;
+}
+.spanf{
+	padding: 35px 0;
+	font-weight: bold;
+	font: normal normal normal 42px/1.41em oswald-medium,oswald,sans-serif;
+    color: #000000;
+}
+.bg11
+{
+	width: 100%;
+	min-height: 150px;
+	background: #FFC041;
+}
+.bg11 h1{
+	padding-top: 30px;
 	
 }
-.banner-text1 {
-	position: absolute;
-	color: #fff;
-	font-weight: bolder;
-	font-size: 27px;
-	left: 20%;
-	top: 17%;
-
+.texb{
+	padding: 45px 0;
 }
-.banner-text2 {
-	position: absolute;
-	color: #fff;
-	font-weight: bolder;
-	font-size: 27px;
-	left: 20%;
-	top: 23%;
-
+.puja{
+	padding-top: 40px;
 }
-.container2{
+.imgbt h1{
+	padding-bottom: 20px;
+}
+.imgbt img{
 	width: 100%;
-	height: auto;
-	background: #000000;
 }
-footer{
-	height: 200px;
-	color: #ffffff;
-}
-.form a{
-	color:#fff;
-}
-.form a:hover{
-	color: #55aa00;
-}
-.form h2{
-	font-size: 28px;
-	color: #fff;
-	font-weight: 600;
-	padding: 55px 0px;
-	text-align: center;
+.syard h1{
+	color: #000;
+	font-weight: bolder;
+	border-bottom: 2px solid #000;
 }
