--- a/puja.css
+++ b/puja.css
@@ -63,6 +63,24 @@ a{
 	color: #000;
 	transition: 0.6s;
 }
+
+.btn-warning{
+	background: #50DAAC;
+	padding: 19px 36px;
+	text-transform: uppercase;
+	border: none;
+}
+.btn-warning a{
+	color: #fff;
+	text-decoration: none;
+	}
+.btn-warning:hover{
+	background:#FFD575;
+	font-weight: bold;
+	color: #000;
+	transition: 0.6s;
+}
+
 .uzz a:hover{
 	color: #000;
 }
@@ -100,6 +118,13 @@ a{
 	font: normal normal normal 42px/1.41em oswald-medium,oswald,sans-serif;
     color: #000000;
 }
+
+.spanfp{
+	padding-bottom: 85px;
+	font-weight: bold;
+	font: normal normal normal 42px/1.41em oswald-medium,oswald,sans-serif;
+    color: #000000;
+}
 .bg11
 {
 	width: 100%;
@@ -116,14 +141,324 @@ a{
 .puja{
 	padding-top: 40px;
 }
+.imgbt{
+	padding: 30px 0;
+}
 .imgbt h1{
 	padding-bottom: 20px;
 }
 .imgbt img{
 	width: 100%;
 }
-.syard h1{
-	color: #000;
+.imgbt h2{
 	font-weight: bolder;
-	border-bottom: 2px solid #000;
+	font-size: 40px;
+	padding-bottom: 42px;
 }
+.syard p{
+	color: #666;
+	font-size: 16px;
+	padding: 5px;
+}
+.syard h1{
+	
+	text-decoration: underline;
+    background-color: #50DAAC;
+	padding: 15px;
+}
+/*.upuja h3{
+	padding-top: 35px;
+	padding-bottom: 35px;
+	padding-right: 270px;
+	color: #000000;
+	font-weight: bold;
+	font: normal normal normal 20px/1.4em impact,impact-w01-2010,impact-w02-2010,impact-w10-2010,sans-serif;
+	}
+.upuja h3 a{
+	color: #000;
+}
+.upuja h3 a:hover{
+	text-decoration:none;
+	transition: 2.2s;
+	}*/
+.syard h1 a{
+	color: #333333;
+}
+.syard h4 a{
+	text-decoration: none;
+	color: #000;
+}
+.syard h1 a:hover{
+	text-decoration:none;
+	transition-delay: 3s;
+}
+/* start image gallery code*/
+
+.row > .column {
+  padding: 0 8px;
+}
+
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+.column {
+  float: left;
+  width: 25%;
+}
+
+/* The Modal (background) */
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  padding-top: 100px;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: black;
+}
+
+/* Modal Content */
+.modal-content {
+  position: relative;
+  background-color: #fefefe;
+  margin: auto;
+  padding: 0;
+  width: 90%;
+  max-width: 1200px;
+}
+
+/* The Close Button */
+.close {
+  color: white;
+  position: absolute;
+  top: 10px;
+  right: 25px;
+  font-size: 35px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: #999;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.mySlides {
+  display: none;
+}
+
+.cursor {
+  cursor: pointer;
+}
+
+/* Next & previous buttons */
+.prev,
+.next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  padding: 16px;
+  margin-top: -50px;
+  color: white;
+  font-weight: bold;
+  font-size: 20px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+  -webkit-user-select: none;
+}
+
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover,
+.next:hover {
+  background-color: rgba(0, 0, 0, 0.8);
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+img {
+  margin-bottom: -4px;
+}
+
+.caption-container {
+  text-align: center;
+  background-color: black;
+  padding: 2px 16px;
+  color: white;
+}
+
+.demo {
+  opacity: 0.6;
+}
+
+.active,
+.demo:hover {
+  opacity: 1;
+}
+
+img.hover-shadow {
+  transition: 0.3s;
+}
+
+.hover-shadow:hover {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+/* end image gallery code*/
+
+.line1{
+	border:3px solid #85E6CD;
+	border-top: none;
+	border-left: none;
+	border-right: none;
+	padding-top: 0;
+	padding-bottom: 15px;
+}
+.tention{
+	background: url('b1.webp');
+	background-repeat:no-repeat;
+	background-size: cover;
+	height: 76vh;
+	
+	}
+
+@media 
+  (min-width: 375px) and (max-width: 400px),
+  (min-width: 468px) {
+	.yellow1 img{
+	width:500px;
+	padding-top:15px;
+}
+}
+
+.yellow1{
+	padding-top: 16px;
+}
+
+.yellow1 img{
+	width:100%;
+}
+.yellow11{
+	background: #FFC041;
+	height: 75vh;
+	position: relative;
+}
+.yellow11 span{
+	font-weight: bold;
+	font-size: 20px;
+	color: #000;
+	position: absolute;
+	width: 100%;
+	right: 0;
+	top: 50px;
+}
+.yellow11 p{
+	font-size: 16px;
+	padding: 20px 0;
+	color: #000;
+	position: absolute;
+	width: 100%;
+	right:160px;
+	top: 98px;
+}
+.whys h3{
+	padding: 15px 0;
+	font-weight: bold;
+}
+.whys p{
+	font-size: 16px;
+}
+.formg {
+	padding: 70px 0;
+	position: relative;
+}
+.formg h1{
+	font-weight: bold;
+	font-size: 36px;
+	color: #FFC041;
+	
+	
+}
+.formg p{
+	font-size: 16px;
+	}
+.tpimg{
+	padding-top: 60px;
+}
+.tpimg h3{
+	font-weight: bold;
+	padding: 10px 0;
+	color: #333;
+}
+.tpimg p{
+	font-size: 17px;
+}
+.footfav{
+	padding-top: 50px;
+	padding-bottom: 70px;
+	}
+.footfav h4 {
+	padding-top: 40px;
+}
+.footfav ul li{
+	display: inline;
+	padding-left: 5px;
+	padding-right: 5px;
+	font-size: 22px;
+	color: #000;
+}
+/*End of home page*/
+
+/*Start of Get started page*/
+.form-control{
+	border:none;
+	font-weight: bold;
+	font-size: 22px;
+	color: #404040;
+	padding-top: 12px;
+}
+.checkbox-inline{
+		font-size: 19px;
+    	padding-top: 12px;
+    	text-align: left;
+        	}
+form {
+	
+}
+.gsformb{
+	/*border: 1px solid #000;*/
+	font-size: 20px;
+	padding: 30px 20px;
+	}
+.form-control {
+	padding-top: 0;
+	font-weight: normal;
+	border: 1px solid #666;
+}
+.grouppu{
+	padding: 9px 0;
+}
+
+
+
+/* End of Get started page*/
