--- a/style1.css
+++ b/style1.css
@@ -17,7 +17,7 @@ body{
    max-width:1200px;
 }
 .backgrond{
-	  background: url("../homepag.jpg");
+	  background: url(".../homepag.jpg");
 	  background-size: cover;
 	  min-height: 1250px;
 }
